--- a/src/it/k8s/test.yaml
+++ b/src/it/k8s/test.yaml
@@ -22,6 +22,10 @@ paths:
                   type: string
                 secret:
                   type: string
+                username:
+                  type: array
+                  items:
+                    type: number
                 params:
                   $ref: '#/components/schemas/EventRequest'
             encoding:
@@ -34,43 +38,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/EventResponse"
-  /event/file-test:
-    post:
-      tags:
-        - FileService
-      description: "file post service"
-      operationId: fileMultipartPost
-      requestBody:
-        required: true
-        content:
-          multipart/form-data:
-            schema:
-              type: object
-              properties:
-                username:
-                  type: string
-                avatar:
-                  type: string
-                  format: binary
-      responses:
-        "200":
-          description: yup
-  /event/pure-file-test:
-    post:
-      tags:
-        - FileService
-      description: "file post service"
-      operationId: pureFilePost
-      requestBody:
-        required: true
-        content:
-          application/octet-stream:
-            schema:
-              type: string
-              format: file
-      responses:
-        "200":
-          description: yup
   /event/sample/{id}/{date}/{dateTime}/{nums}:
     get:
       parameters:
@@ -102,6 +69,68 @@ paths:
       responses:
         200:
           description: "some desc"
+  /event/file-test:
+    post:
+      tags:
+        - FileService
+      description: "file post service"
+      operationId: fileMultipartPost
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                username:
+                  type: string
+                avatar:
+                  type: string
+                  format: binary
+      responses:
+        "200":
+          description: yup
+  /event/multi-file-test:
+    post:
+      tags:
+        - FileService
+      description: "file post service"
+      operationId: fileMultifilePost
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                username:
+                  type: array
+                  items:
+                    type: string
+                avatar:
+                  type: array
+                  items:
+                    type: string
+                    format: binary
+      responses:
+        "200":
+          description: yup
+  /event/pure-file-test:
+    post:
+      tags:
+        - FileService
+      description: "file post service"
+      operationId: pureFilePost
+      requestBody:
+        required: true
+        content:
+          application/octet-stream:
+            schema:
+              type: string
+              format: file
+      responses:
+        "200":
+          description: yup
   /event/kivan/{id}:
     get:
       parameters:
