--- a/src/test/resources/test.yaml
+++ b/src/test/resources/test.yaml
@@ -603,5 +603,41 @@ components:
             - square
             - logarithmic
       uniqueItems: false
+    fruit_basket:
+      title: fruit
+      type: object
+      required:
+        - owner
+      properties:
+        owner:
+          type: string
+        fruits:
+          items:
+            # https://swagger.io/docs/specification/data-models/inheritance-and-polymorphism/
+            anyOf:
+              - $ref: '#/components/schemas/my_apple'
+              - $ref: '#/components/schemas/my_banana'
+            discriminator:
+              propertyName: type
+              mapping:
+                banana: '#/components/schemas/my_banana'
+                apple: '#/components/schemas/my_apple'
+          type: array
+    my_apple:
+      title: apple
+      type: object
+      properties:
+        type:
+          type: string
+        kind:
+          type: string
+    my_banana:
+      title: banana
+      type: object
+      properties:
+        type:
+          type: string
+        count:
+          type: number
 
 
