Resolve issue with enums with spaces
Fixes #46

--- a/src/it/k8s/test.yaml
+++ b/src/it/k8s/test.yaml
@@ -549,4 +549,9 @@ components:
           type: string
         count:
           type: number
-
+    NumericAndSpacedEnum:
+      type: string
+      enum:
+        - Ahoy There
+        - 18 Spaces Here
+        - 667
