--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,8 @@
 
 	<properties>
 		<openapi-codegen-version>5.1.0</openapi-codegen-version>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
 	</properties>
 
 	<prerequisites>
