add test cases for objects with (allOf) enum properties

--- a/src/test/resources/test.yaml
+++ b/src/test/resources/test.yaml
@@ -651,3 +651,13 @@ components:
         - 1
         - 2
         - 3
+    ObjectContainingEnum:
+      type: object
+      properties:
+        name:
+          type: string
+        enumFieldAllOf:
+          allOf:
+            - $ref: '#/components/schemas/NumericAndSpacedEnum'
+        enumFieldPlainRef:
+          $ref: '#/components/schemas/NumericAndSpacedEnum'
