resolves issue with + in enum
fixes #54

--- a/src/it/k8s_null/test.yaml
+++ b/src/it/k8s_null/test.yaml
@@ -553,6 +553,7 @@ components:
       type: string
       enum:
         - Ahoy There
+        - application+json
         - 18 Spaces Here
         - 667
     IntTypeEnum:
