--- a/src/it/k8s/test.yaml
+++ b/src/it/k8s/test.yaml
@@ -554,6 +554,7 @@ components:
       enum:
         - Ahoy There
         - 18 Spaces Here
+        - application+json
         - 667
     IntTypeEnum:
       type: integer
