Added test case for 2d array

--- a/src/it/k8s_null/test.yaml
+++ b/src/it/k8s_null/test.yaml
@@ -577,3 +577,13 @@ components:
             - $ref: '#/components/schemas/NumericAndSpacedEnum'
         enumFieldPlainRef:
           $ref: '#/components/schemas/NumericAndSpacedEnum'
+    PointGeometry:
+      type: object
+      properties:
+        coordinates:
+          type: array
+          items:
+            type: array
+            items:
+              type: number
+              format: double
