Query Parameters for unencoded date/times
DateTimes and Dates in Query parameters should not be url encoded
as Dio is also doing this, which is double encoding them.

5.2.1 of OpenAPI has also introduced some issues.

--- a/src/it/k8s/test.yaml
+++ b/src/it/k8s/test.yaml
@@ -68,6 +68,12 @@ paths:
           schema:
             type: string
             format: date-time
+        - name: queryDateTime
+          in: query
+          required: false
+          schema:
+            type: string
+            format: date-time
       operationId: getSampleWithAllTypes
       tags:
         - ControlService
