phase 1 - fix nullable vs required

--- a/src/test/resources/test.yaml
+++ b/src/test/resources/test.yaml
@@ -539,6 +539,13 @@ components:
       description: "can be anything, no properties"
     SecondJsonType:
       description: "can be anything, no properties"
+    UsesTimeTypeAsRequired:
+      type: object
+      required:
+        - time
+      properties:
+        time:
+          $ref: "#/components/schemas/TimeType"
     TimeType:
       type: string
       format: date-time
