phase 2 - fromJson constructor working

--- a/src/test/resources/test.yaml
+++ b/src/test/resources/test.yaml
@@ -368,6 +368,7 @@ components:
           type: integer
         error_msg:
           type: string
+          nullable: true
         listofNumbers:
           type: array
           items:
