phase 3 - 1 optionals are null again by default

--- a/src/test/resources/test.yaml
+++ b/src/test/resources/test.yaml
@@ -597,6 +597,11 @@ components:
           type: object
           additionalProperties:
             $ref: "#/components/schemas/TimeType"
+        extraNullable:
+          type: object
+          nullable: true
+          additionalProperties:
+            $ref: "#/components/schemas/TimeType"
     JSONType:
       description: "can be anything, no properties"
     SecondJsonType:
