phase 3 - beginning of dealing with num casting
this is to fix #70

--- a/src/test/resources/integration_test.yaml
+++ b/src/test/resources/integration_test.yaml
@@ -360,6 +360,15 @@ components:
             items:
               type: integer
             type: array
+        mapOfIntegers:
+          type: object
+          additionalProperties:
+            type: integer
+        mapOfDoubles:
+          type: object
+          additionalProperties:
+            type: number
+            format: double
         dependencies:
           type: object
           additionalProperties:
