phase 3 - maps of double/int now supported
further fixes for #70

--- a/src/test/resources/integration_test.yaml
+++ b/src/test/resources/integration_test.yaml
@@ -345,6 +345,27 @@ components:
         - CLOSED
         - PENDING
         - ARCHIVING
+    DoubleAndIntConversion:
+      type: object
+      properties:
+        intList:
+          type: array
+          items:
+            type: integer
+        intMap:
+          type: object
+          additionalProperties:
+            type: integer
+        doubleList:
+          type: array
+          items:
+            type: number
+            format: double
+        doubleMap:
+          type: object
+          additionalProperties:
+            type: number
+            format: double
     "com.bluetrainsoftware.AddProps1":
       properties:
         extra:
