--- a/src/it/k8s/test.yaml
+++ b/src/it/k8s/test.yaml
@@ -345,6 +345,27 @@ components:
         - CLOSED
         - PENDING
         - ARCHIVING
+    DoubleAndIntConversion:
+      type: object
+      properties:
+        intList:
+          type: array
+          items:
+            type: integer
+        intMap:
+          type: object
+          additionalProperties:
+            type: integer
+        doubleList:
+          type: array
+          items:
+            type: number
+            format: double
+        doubleMap:
+          type: object
+          additionalProperties:
+            type: number
+            format: double
     "com.bluetrainsoftware.AddProps1":
       properties:
         extra:
@@ -360,6 +381,15 @@ components:
             items:
               type: integer
             type: array
+        mapOfIntegers:
+          type: object
+          additionalProperties:
+            type: integer
+        mapOfDoubles:
+          type: object
+          additionalProperties:
+            type: number
+            format: double
         dependencies:
           type: object
           additionalProperties:
@@ -571,8 +601,8 @@ components:
       nullable: true
       enum:
         - Ahoy There
-        - 18 Spaces Here
         - application+json
+        - 18 Spaces Here
         - 667
     IntTypeEnum:
       type: integer
