phase 3 - maps of double/int now supported
basic types now convert for ints and doubles

--- a/src/it/k8s/test.yaml
+++ b/src/it/k8s/test.yaml
@@ -347,7 +347,15 @@ components:
         - ARCHIVING
     DoubleAndIntConversion:
       type: object
+      required:
+        - basicDouble
+        - basicInt
       properties:
+        basicInt:
+          type: integer
+        basicDouble:
+          type: number
+          format: double
         intList:
           type: array
           items:
