OpenAPI optionals/nulls/num casting (#85)
* phase 3 - 1 optionals are null again by default

* phase 3 - 2 ensure required fields act properly

* phase 3 - complete test fixing and minor issue with non-nullsafe Dart

* phase 3 - beginning of dealing with num casting

this is to fix #70

* phase 3 - maps of double/int now supported

further fixes for #70

* phase 3 - maps of double/int now supported

basic types now convert for ints and doubles

--- a/src/it/k8s/test.yaml
+++ b/src/it/k8s/test.yaml
@@ -345,6 +345,35 @@ components:
         - CLOSED
         - PENDING
         - ARCHIVING
+    DoubleAndIntConversion:
+      type: object
+      required:
+        - basicDouble
+        - basicInt
+      properties:
+        basicInt:
+          type: integer
+        basicDouble:
+          type: number
+          format: double
+        intList:
+          type: array
+          items:
+            type: integer
+        intMap:
+          type: object
+          additionalProperties:
+            type: integer
+        doubleList:
+          type: array
+          items:
+            type: number
+            format: double
+        doubleMap:
+          type: object
+          additionalProperties:
+            type: number
+            format: double
     "com.bluetrainsoftware.AddProps1":
       properties:
         extra:
@@ -360,6 +389,15 @@ components:
             items:
               type: integer
             type: array
+        mapOfIntegers:
+          type: object
+          additionalProperties:
+            type: integer
+        mapOfDoubles:
+          type: object
+          additionalProperties:
+            type: number
+            format: double
         dependencies:
           type: object
           additionalProperties:
@@ -571,8 +609,8 @@ components:
       nullable: true
       enum:
         - Ahoy There
-        - 18 Spaces Here
         - application+json
+        - 18 Spaces Here
         - 667
     IntTypeEnum:
       type: integer
