phase 4 - testing testing testing
Running across hundreds of Ogurets based tests now complete

--- a/src/it/k8s/test.yaml
+++ b/src/it/k8s/test.yaml
@@ -350,9 +350,14 @@ components:
       required:
         - basicDouble
         - basicInt
+        - intList
+        - doubleMap
       properties:
         basicInt:
           type: integer
+        int64Int:
+          type: integer
+          format: int64
         basicDouble:
           type: number
           format: double
