--- a/pom.xml
+++ b/pom.xml
@@ -204,6 +204,16 @@
           </includes>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>3.2.0</version>
+        <configuration>
+          <source>11</source>
+          <detectJavaApiLink>false</detectJavaApiLink>
+        </configuration>
+      </plugin>
+
       <!-- ensure we know what our licenses are -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
