--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
 		<openapi-codegen-version>6.0.1</openapi-codegen-version>
     <maven.compiler.target>1.11</maven.compiler.target>
     <maven.compiler.source>1.11</maven.compiler.source>
+    <kotlin.version>1.7.10</kotlin.version>
 	</properties>
 
 	<prerequisites>
@@ -124,7 +125,7 @@
       <plugin>
         <groupId>org.jetbrains.kotlin</groupId>
         <artifactId>kotlin-maven-plugin</artifactId>
-        <version>1.7.10</version>
+        <version>${kotlin.version}</version>
         <executions>
           <execution>
             <id>compile</id>
