--- a/src/it/k8s/test.yaml
+++ b/src/it/k8s/test.yaml
@@ -4,6 +4,25 @@ info:
   description: Sample API for test case for k8s
   version: "1.1.1"
 paths:
+  /inheritance:
+    get:
+      tags:
+        - InheritanceService
+      operationId: "inheritance"
+      responses:
+        "200":
+          description: "Description"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Entity4"
+
+        "201":
+          description: "Description"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Empty"
   /event/upcoming:
     post:
       tags:
@@ -657,3 +676,156 @@ components:
         from:
           type: string
           nullable: true
+    Entity:
+      type: object
+      properties:
+        id:
+          type: integer
+          nullable: false
+        name:
+          type: string
+          nullable: true
+      discriminator:
+        propertyName: type
+      additionalProperties: false
+
+    Entity2:
+      type: object
+      allOf:
+        - $ref: '#/components/schemas/Entity'
+      properties:
+        description:
+          type: string
+          nullable: true
+      additionalProperties: false
+
+    Entity3:
+      type: object
+      allOf:
+        - $ref: '#/components/schemas/Entity2'
+      properties:
+        summary:
+          type: string
+          nullable: true
+      additionalProperties: false
+
+    Entity4:
+      type: object
+      allOf:
+        - $ref: '#/components/schemas/Entity3'
+      properties:
+        notes:
+          type: string
+          nullable: true
+        moreNotes:
+          type: string
+          nullable: true
+      additionalProperties: false
+
+    Empty:
+      type: object
+      discriminator:
+        propertyName: type
+      allOf:
+        - type: object
+
+      additionalProperties: false
+
+    Empty2:
+      type: object
+      allOf:
+        - $ref: '#/components/schemas/Empty'
+      additionalProperties: false
+
+    Empty3:
+      type: object
+      allOf:
+        - $ref: '#/components/schemas/Empty2'
+      additionalProperties: false
+
+    EmptyEntity:
+      type: object
+      allOf:
+        - $ref: '#/components/schemas/Entity'
+      additionalProperties: false
+
+    Named:
+      type: object
+      allOf:
+        - $ref: '#/components/schemas/Empty3'
+      properties:
+        name:
+          type: string
+          nullable: true
+      additionalProperties: false
+
+    WithList:
+      type: object
+      properties:
+        list:
+          type: array
+          items:
+            $ref: '#/components/schemas/Entity'
+          nullable: false
+        nullableList:
+          type: array
+          items:
+            $ref: '#/components/schemas/Entity'
+          nullable: true
+      discriminator:
+        propertyName: type
+      additionalProperties: false
+
+    WithListDerived:
+      type: object
+      allOf:
+        - $ref: '#/components/schemas/Entity'
+      properties:
+        list:
+          type: array
+          items:
+            $ref: '#/components/schemas/Entity'
+          nullable: false
+        nullableList:
+          type: array
+          items:
+            $ref: '#/components/schemas/Entity'
+          nullable: true
+      additionalProperties: false
+
+    WithListDerived2:
+      type: object
+      allOf:
+        - $ref: '#/components/schemas/WithList'
+      properties:
+        list2:
+          type: array
+          items:
+            $ref: '#/components/schemas/Entity'
+          nullable: false
+        nullableList2:
+          type: array
+          items:
+            $ref: '#/components/schemas/Entity'
+          nullable: true
+      additionalProperties: false
+
+    WithListDerived3:
+      type: object
+      allOf:
+        - $ref: '#/components/schemas/WithList'
+      properties:
+        someString:
+          type: string
+          nullable: false
+      additionalProperties: false
+
+    WithListDerived4:
+      type: object
+      allOf:
+        - $ref: '#/components/schemas/WithListDerived'
+      properties:
+        someString:
+          type: string
+          nullable: false
+      additionalProperties: false
