--- a/.github/workflows/test-pr.yaml
+++ b/.github/workflows/test-pr.yaml
@@ -2,9 +2,9 @@ name: Build and run integration tests on PR
 
 # Controls when the action will run.
 on:
-  # Triggers the workflow on push request events but only for the master branch
+  # Triggers the workflow on push request events but only for the main branch
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
     paths:
       - 'src/**/*'
       - 'pom.xml'
