--- a/pom.xml
+++ b/pom.xml
@@ -34,10 +34,10 @@
 	</scm>
 
 	<properties>
-		<openapi-codegen-version>6.2.1</openapi-codegen-version>
+		<openapi-codegen-version>6.4.0</openapi-codegen-version>
     <maven.compiler.target>1.11</maven.compiler.target>
     <maven.compiler.source>1.11</maven.compiler.source>
-    <kotlin.version>1.7.10</kotlin.version>
+    <kotlin.version>1.8.10</kotlin.version>
 	</properties>
 
 	<prerequisites>
@@ -74,13 +74,13 @@
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
       <artifactId>kotlin-stdlib-jdk8</artifactId>
-      <version>[1.7.10]</version>
+      <version>[${kotlin.version}]</version>
     </dependency>
 
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
       <artifactId>kotlin-reflect</artifactId>
-      <version>[1.7.10]</version>
+      <version>[${kotlin.version}]</version>
     </dependency>
 
     <dependency>
