--- a/src/it/k8s_null/pom.xml
+++ b/src/it/k8s_null/pom.xml
@@ -51,7 +51,7 @@
       <plugin>
         <groupId>org.openapitools</groupId>
         <artifactId>openapi-generator-maven-plugin</artifactId>
-        <version>6.2.1</version>
+        <version>6.4.0</version>
         <dependencies>
           <dependency>
             <groupId>com.bluetrainsoftware.maven</groupId>
@@ -84,7 +84,7 @@
                   pubspec-dependencies=path: '>=1.7.0 <2.0.0',rxdart: 0.24.0]]>
                 </additionalProperty>
                 <additionalProperty>
-                  pubspec-dev-dependencies=uuid: 2.0.4
+                  pubspec-dev-dependencies=uuid: ^3.0.0
                 </additionalProperty>
                 <additionalProperty>
                   nullSafe=true
